<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@drawable/prompt_title_bg"
        android:gravity="center" >

        <TextView
            android:id="@+id/prompt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/history_item_attribute" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="190dip"
        android:layout_below="@id/header"
        android:background="@drawable/prompt_item_bg"
        android:padding="10dip" >

        <TextView
            android:id="@+id/file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="#000000"
            android:text="@string/history_file_name" />

        <TextView
            android:id="@+id/file_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/file_name"
            android:singleLine="true"
            android:textColor="#000000"
            android:text="@string/history_file_type" />

        <TextView
            android:id="@+id/file_dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/file_type"
            android:textColor="#000000"
            android:text="@string/history_file_dir" />

        <TextView
            android:id="@+id/file_received_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/file_dir"
            android:singleLine="true"
            android:textColor="#000000"
            android:text="@string/history_file_received" />

        <TextView
            android:id="@+id/file_total_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="#000000"
            android:layout_below="@id/file_received_size"
            android:text="@string/history_file_total_size" />

        <TextView
            android:id="@+id/file_receiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="#000000"
            android:layout_below="@id/file_total_size"
            android:text="@string/history_file_receiver" />

        <TextView
            android:id="@+id/file_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_below="@id/file_receiver"
            android:text="@string/history_file_status" />

        <TextView
            android:id="@+id/file_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/file_status"
            android:textColor="#000000"
            android:text="@string/history_file_date" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/body"
        android:background="@drawable/prompt_bottom_bg"
        android:gravity="center" >

        <TextView
            android:id="@+id/file_comfirm"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:background="@drawable/prompt_determine_button"
            android:gravity="center"
            android:text="@string/determine"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>