<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@drawable/prompt_title_bg"
            android:gravity="center">

        <TextView
                android:id="@+id/prompt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/hint"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="120dip"
            android:layout_below="@id/header"
            android:background="@drawable/prompt_item_bg"
            android:gravity="center_horizontal">
        <TextView android:id="@+id/content_txt"
                  android:layout_width="200dp"
                  android:layout_height="40dp"
                  android:text="@string/share_unbind_weibo"
                  android:textColor="#000000"
                  android:gravity="center"
                  android:textSize="20dp"
                />

        <TextView android:id="@+id/confirm_button"
                  android:layout_width="120dp"
                  android:layout_height="40dp"
                  android:layout_marginTop="10dp"
                  android:layout_below="@+id/content_txt"
                  android:text="@string/determine"
                  android:textColor="#ffffff"
                  android:gravity="center"
                  android:background="@drawable/prompt_delete_button"

                />
        <TextView android:id="@+id/cancel_button"
                  android:layout_width="120dp"
                  android:layout_height="40dp"
                  android:text="@string/cancel"
                  android:textColor="#ffffff"
                  android:layout_marginLeft="20dp"
                  android:layout_toRightOf="@+id/confirm_button"
                  android:background="@drawable/prompt_delete_button"
                  android:gravity="center"
                  android:layout_alignTop="@+id/confirm_button"
                />


    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@id/body"
            android:background="@drawable/prompt_bottom_bg"
            android:gravity="center">
    </RelativeLayout>

</RelativeLayout>