<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/pi_bg"
    android:orientation="vertical" >

    <com.cloudsynch.quickshare.widgets.Titlebar
        android:id="@+id/title_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_title_bg" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/transmission_navigation_bg_01"
        android:gravity="center_vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/transmission_category_selector"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/resource_manager_video"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/apk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/transmission_category_selector"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/resource_manager_apk"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/transmission_category_selector"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/resource_manager_photo"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/transmission_category_selector"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/resource_manager_audio"
                android:textSize="16sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/home_separate_line" />

            <Button
                android:id="@+id/ts_receive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/transmission_category_selector"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/resource_manager_receive"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/transmission_navigation_bg_02" >

        <Button
            android:id="@+id/select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/transmission_selector"
            android:text="@string/resource_manager_select_all" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/transmission_selector"
            android:text="@string/resource_manager_send"
            android:visibility="gone" />

        <TextView
            android:id="@+id/selected_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:textColor="@color/black" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/category_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home_down_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp" >

            <Button
                android:id="@+id/dissolve"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@drawable/transmission_dismiss_button"
                android:text="@string/resource_manager_dissolve"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/friends_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

</LinearLayout>