<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@drawable/prompt_title_bg"
        android:gravity="center" >

        <TextView
            android:id="@+id/prompt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="70dip"
        android:layout_below="@id/header"
        android:gravity="center"
        android:background="@drawable/prompt_item_bg"
        android:padding="10dip" >

        <TextView
            android:id="@+id/msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/file_total_size"
            android:textSize="18sp"
            android:textColor="#000000" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/body"
        android:background="@drawable/prompt_bottom_bg"
        android:gravity="center" >

        <TextView
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:background="@drawable/prompt_determine_button"
            android:gravity="center"
            android:text="@string/determine"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@id/confirm_button"
            android:background="@drawable/prompt_determine_button"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>